--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,7 @@ author:
   name: GitHub User
   email: your-email@domain.com
 description: > # this means to ignore newlines until "show_excerpts:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Assessment tools to evaluate demonstration of competencies using the SFIA skills framework
 
 show_excerpts: false # set to true to show excerpts on the homepage
 
@@ -49,8 +47,8 @@ minima:
 
 # If you want to link only specific pages in your header, uncomment
 # this and add the path to the pages in order as they should show up
-#header_pages:
-# - about.md
+header_pages:
+ - about.md
 
 # Build settings
 theme: minima
