added tabs in the top menu

--- a/_config.yml
+++ b/_config.yml
@@ -49,6 +49,12 @@ minima:
 # this and add the path to the pages in order as they should show up
 header_pages:
  - about.md
+ - tools.md
+ - portfolios.md
+ - cc2020-sfia-mapping.md
+ - bibliography.md
+ - applications.md
+ - contacts.md
 
 # Build settings
 theme: minima
